large desktop adjustment
added max-width for large desktops or monitors

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     </div>
   </nav>
   <!--- Section 1: Home Page and Call to Action --->
+  <div style="background-color: var(--main)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="homepage">
   <div class="homepage_container">
     <div class="homepage_left">
@@ -38,10 +40,10 @@
     </div>
   </div>
   </div>
+</div>
+</div>
   <!--- Section 2: Brief About Me with Picture --->
   <!-- Desktop -->
-  <!-- TEST about -->
-
       <div class="grid_background_col">
           <div class="desktop">
     <div class="about_cont">
@@ -50,7 +52,7 @@
         <!-- <div class="border-line"></div> -->
       </div>
       <div class="about-right">
-        <div class="about-text">
+        <div class="aboutpag1-text">
         <h1 style="color: var(--accent2);">ABOUT ME</h1><br>
         <p>Hi! My name is Caroline Williams, and I am a GIS and Remote Sensing Analyst currently working as a NASA DEVELOP Pop-up Fellow. I enjoy all things relating to environmental science and using technology to better understand our planet.</p>
         </div>
@@ -81,6 +83,8 @@
   </div>
     </div>
   <!-- Section 2: Project Highlight -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <div class="grid_title_txt">
     <h1>PROJECT HIGHLIGHT</h1>
@@ -131,6 +135,8 @@
       <span class="dot" onclick="currentSlide(2)"></span>
     </div>
     </div>
+  </div>
+  </div>
   </div>
   <!--- Section 3: Recent Work in Grid format --->
   <div class="grid_background_col">
