--- a/portfolio.html
+++ b/portfolio.html
@@ -26,18 +26,17 @@
       <h1>PORTFOLIO</h1>
     </div>
   </div>
-  <!--- Section 2a: GIS Portfolio control buttons --->
-
-  <!-- Test Layout -->
-<div class="portfolio_cont">
-<div id="myBtnContainer">
-  <button class="portbtn portactive" onclick="filterSelection('all')"> Show all</button>
-  <button class="portbtn" onclick="filterSelection('GIS')"> GIS</button>
-  <button class="portbtn" onclick="filterSelection('remotesensing')"> Remote Sensing</button>
-  <button class="portbtn" onclick="filterSelection('webmaps')"> Web Mapping</button>
-</div>
-
 <!-- Portfolio Gallery Grid -->
+<div style="background-color: var(--alternative)">
+  <div style="max-width: 1800px; margin: 0 auto !important; float: none !important;">
+  <!--- Section 2a: GIS Portfolio control buttons --->
+  <div class="portfolio_cont">
+  <div id="myBtnContainer">
+    <button class="portbtn portactive" onclick="filterSelection('all')"> Show all</button>
+    <button class="portbtn" onclick="filterSelection('GIS')"> GIS</button>
+    <button class="portbtn" onclick="filterSelection('remotesensing')"> Remote Sensing</button>
+    <button class="portbtn" onclick="filterSelection('webmaps')"> Web Mapping</button>
+  </div>
 <div class="portrow">
   <div class="portcolumn GIS remotesensing">
     <div class="portcontent">
@@ -121,7 +120,9 @@
       </a>
     </div>
   </div>
+</div>
 <!-- END GRID -->
+</div>
 </div>
 </div>
   <!--- Section 3: Contact Information --->
