--- a/projects/Electric_Vehicle_Spatial_Analysis.html
+++ b/projects/Electric_Vehicle_Spatial_Analysis.html
@@ -28,6 +28,8 @@
   </div>
   <!--- Section 2: Project Title & Website Image --->
   <!-- Desktop -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <div class="desktop">
       <div class="about_cont">
@@ -42,6 +44,8 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
   <!-- Tablet & Mobile-->
     <div class="tablet_device_1000px">
       <div class="project_tablet_cont">
@@ -59,6 +63,8 @@
   </div>
   <!--- Section 3: Project Information --->
   <!-- Desktop -->
+  <div style="background-color: var(--lightmain)">
+  <div style="max-width: 1400px; margin: 0 auto !important; float: none !important;">
   <div class="desktop">
     <div class="grid_background_col">
       <div class="proj-info-cont" style="text-align:left;">
@@ -89,6 +95,8 @@
         </div>
       </div>
     </div>
+  </div>
+  </div>
   </div>
   <!-- Tablet & Mobile -->
   <div class="tablet_device_1000px">
@@ -123,6 +131,8 @@
     </div>
   </div>
   <!-- Section 4: Project Description and Results -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Project Description:</b></p>
     <p style="padding-bottom: 20px;">This project was accomplished alongside other MS GIS students at Clark University: Pilar Delpino, Mingshuang Lian, and Jess Strzempko. The New York Analysis was completed as my part of the final project in Geospatial Analysis with R. Other members worked on different locations and used varying methodologies.
@@ -200,6 +210,8 @@
         </ul>
       </div>
     </div>
+  </div>
+  </div>
   <!--- Section 5: Contact Information --->
   <div class="about_me_interests_cont_pg2">
     <div class="about_me_interests_pg2">
