--- a/projects/Malnutrition-Health-Sites-in-Mali-Web-Mapping.html
+++ b/projects/Malnutrition-Health-Sites-in-Mali-Web-Mapping.html
@@ -29,6 +29,8 @@
   </div>
   <!--- Section 2: Project Title & Website Image --->
   <!-- Desktop -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <div class="desktop">
       <div class="about_cont">
@@ -46,6 +48,8 @@
         </div>
       </div>
     </div>
+  </div>
+  </div>
   <!-- Tablet & Mobile-->
     <div class="tablet_device_1000px">
       <div class="project_tablet_cont">
@@ -65,6 +69,8 @@
     </div>
   </div>
   <!--- Section 3: Project Information --->
+  <div style="background-color: var(--lightmain)">
+  <div style="max-width: 1400px; margin: 0 auto !important; float: none !important;">
   <!-- Desktop -->
   <div class="desktop">
     <div class="grid_background_col">
@@ -93,6 +99,8 @@
         </div>
       </div>
     </div>
+  </div>
+  </div>
   </div>
   <!-- Tablet & Mobile -->
   <div class="tablet_device_1000px">
@@ -124,6 +132,8 @@
     </div>
   </div>
   <!-- Section 4: Project Description -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Project Description:</b></p>
     <p style="padding-bottom: 20px;">As a part of the Web Mapping and Open Source GIS course, I completed this web map as one of our “studio” assignments. This web map demonstrates various health variables in Mali represented by different icons. Users can toggle between these layers by navigating the legend panel.
@@ -144,6 +154,8 @@
       </ul>
     </div>
   </div>
+</div>
+</div>
   <!--- Section 5: Contact Information --->
   <div class="about_me_interests_cont_pg2">
     <div class="about_me_interests_pg2">
