--- a/projects/Mapping-Burn-Scars-using-GEE.html
+++ b/projects/Mapping-Burn-Scars-using-GEE.html
@@ -28,6 +28,8 @@
   </div>
   <!--- Section 2: Project Title & Website Image --->
   <!-- Desktop -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <div class="desktop">
       <div class="about_cont">
@@ -45,6 +47,8 @@
         </div>
       </div>
     </div>
+    </div>
+  </div>
   <!-- Tablet & Mobile-->
     <div class="tablet_device_1000px">
       <div class="project_tablet_cont">
@@ -65,6 +69,8 @@
   </div>
   <!--- Section 3: Project Information --->
   <!-- Desktop -->
+  <div style="background-color: var(--lightmain)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="desktop">
     <div class="grid_background_col">
       <div class="proj-info-cont" style="text-align:left;">
@@ -84,6 +90,8 @@
         </div>
       </div>
     </div>
+  </div>
+  </div>
   </div>
   <!-- Tablet & Mobile -->
   <div class="tablet_device_1000px">
@@ -107,6 +115,8 @@
     </div>
   </div>
   <!-- Section 4: Project Links -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Project Description:</b></p>
     <p style="padding-bottom: 20px;">This project examines wildfire burn severity using the Google Earth Engine (GEE) JavaScript API. Specifically, this script calculates the Normalized Burn Ratio (NBR) to generate dNBR. Once dNBR is calculated, the resulting image is then classified into different degrees of burn severity: low severity, moderate-low severity, moderate-high severity, high severity. This analysis is based on the <a class="link" href="https://un-spider.org/advisory-support/recommended-practices/recommended-practice-burn-severity/in-detail/normalized-burn-ratio" target="_blank">UN-SPIDER</a> recommendations on best practices for evaluating burn severity. The script can easily be modified to any study area of interest by inputting a Landsat Path and Row, date pre-fire, and date post-fire. The script outputs an NBR, dNBR, and USGS-based Burn Severity Classification layer.
@@ -122,6 +132,8 @@
         </li>
       </ul>
     </div>
+  </div>
+  </div>
   </div>
   <!--- Section 5: Contact Information --->
   <div class="about_me_interests_cont_pg2">
