--- a/projects/NASA-DEVELOP-ArgentinaAg.html
+++ b/projects/NASA-DEVELOP-ArgentinaAg.html
@@ -28,6 +28,8 @@
   </div>
   <!--- Section 2: Project Title & Website Image --->
   <!-- Desktop -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <div class="desktop">
       <div class="about_cont">
@@ -44,6 +46,8 @@
           </div>
         </div>
       </div>
+    </div>
+    </div>
     </div>
   <!-- Tablet & Mobile-->
     <div class="tablet_device_1000px">
@@ -65,6 +69,8 @@
   </div>
   <!--- Section 3: Project Information --->
   <!-- Desktop -->
+  <div style="background-color: var(--lightmain)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="desktop">
     <div class="grid_background_col">
       <div class="proj-info-cont" style="text-align:left;">
@@ -101,6 +107,8 @@
         </div>
       </div>
     </div>
+  </div>
+  </div>
   </div>
   <!-- Tablet & Mobile -->
   <div class="tablet_device_1000px">
@@ -141,6 +149,8 @@
     </div>
   </div>
   <!-- Section 4: Project Abstract & Deliverables -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Abstract:</b></p>
     <p style="padding-bottom: 20px;">Early harvest information helps drive the national budget in Argentina, providing valuable planning information to identify potential food-insecure regions, anticipate transportation and storage demands, predict price fluctuations, and project commodity trends. However, crop yield estimates are currently subjective, based on interviews with qualified informants (i.e., farmers, agribusiness actors). In partnership with the Buenos Aires Grain Exchange, we leveraged Terra Moderate Resolution Imaging Spectroradiometer (MODIS), Soil Moisture Active Passive (SMAP), and Integrated Multi-satellitE Retrievals for Global Precipitation Measurement (GPM IMERG) NASA Earth observations to develop a Google Earth Engine (GEE) toolset to monitor vegetation growth. The first component of the toolset produces spatial and temporal maps of temperature, precipitation, soil moisture, and the Normalized Difference Vegetation Index (NDVI), allowing users to visualize the influence of the region’s climate and weather. Next, we developed an autoregressive model to predict NDVI several months in advance. Lastly, we created a linear regression model of crop yield and NDVI for soybeans, corn, and wheat, and input the forecasted NDVI to generate a predicted crop yield output. The NDVI model had an RMSE of 0.074 and at Zone 6 produced an R2 of 0.99, 0.89, and 0.54 at two, four, and six months, respectively. The crop yield model produced an R2 value of 0.84, 0.90 and 0.005 respectively for soybeans, corn, and wheat in Zone 3 after model calibration. This information is vital for vegetation growth monitoring by identifying areas of high growth and allocating resources to areas of lower growth to efficiently maximize crop yields.
@@ -165,6 +175,8 @@
         </li>
       </ul>
     </div>
+  </div>
+  </div>
   </div>
   <!--- Section 5: Contact Information --->
   <div class="about_me_interests_cont_pg2">
