--- a/projects/NASA-DEVELOP-CentralAmericaDisasters.html
+++ b/projects/NASA-DEVELOP-CentralAmericaDisasters.html
@@ -28,6 +28,8 @@
   </div>
   <!--- Section 2: Project Title & Website Image --->
   <!-- Desktop -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <div class="desktop">
       <div class="about_cont">
@@ -44,6 +46,8 @@
           </div>
         </div>
       </div>
+    </div>
+    </div>
     </div>
   <!-- Tablet & Mobile-->
     <div class="tablet_device_1000px">
@@ -65,6 +69,8 @@
   </div>
   <!--- Section 3: Project Information --->
   <!-- Desktop -->
+  <div style="background-color: var(--lightmain)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="desktop">
     <div class="grid_background_col">
       <div class="proj-info-cont" style="text-align:left;">
@@ -109,6 +115,8 @@
         </div>
       </div>
     </div>
+  </div>
+  </div>
   </div>
   <!-- Tablet & Mobile -->
   <div class="tablet_device_1000px">
@@ -157,6 +165,8 @@
     </div>
   </div>
   <!-- Section 4: Project Abstract & Deliverables -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Abstract:</b></p>
     <p style="padding-bottom: 20px;">In November 2020, Hurricanes Eta and Iota hit Central America within weeks of each other, causing severe flooding, landslides, and widespread damage. NASA DEVELOP partnered with Comité Regional de Recursos Hidráulicos (CRRH), Centro de Coordinación para la Prevención de los Desastres en América Central y República Dominicana (CEPREDENAC), and Sistema de la Integración Centroamericana (SICA) to better understand how flooding throughout Central America has impacted and will continue to affect communities, focusing on sites in Guatemala, Honduras, El Salvador, Belize, Nicaragua, western Panama, and eastern Costa Rica from January 2015 to October 2021. The team utilized surface reflectance data from Landsat 7 Enhanced Thematic Mapper Plus (ETM+), Landsat 8 Operational Land Imager (OLI), Sentinel-2 MultiSpectral Instrument (MSI), Suomi National Polar-orbiting Partnership (NPP) Visible Infrared Imaging Radiometer Suite (VIIRS), and Terra Moderate Resolution Imaging Spectroradiometer (MODIS). This project also utilized backscatter data from Sentinel-1 C-band Synthetic Aperture Radar (C-SAR) and elevation data from the Shuttle Radar Topography Mission (SRTM). Incorporating these Earth observations in NASA SERVIR’s Hydrologic Remote Sensing Analysis for Floods (HYDRAFloods) tool run on Google Earth Engine (GEE), the team produced historical surface water maps, a case study analysis of the two hurricanes, and a code tutorial. These results indicated that surface water increased in priority sites from 2015 to 2021, optical and SAR imagery detected similar flood patterns and extent after the hurricanes, and rainfall was concentrated on the east coast of the region. These products allow partners to make informed decisions around flooding preparation and disaster mitigation.
@@ -181,6 +191,8 @@
         </li>
       </ul>
     </div>
+  </div>
+  </div>
   </div>
   <!--- Section 5: Contact Information --->
   <div class="about_me_interests_cont_pg2">
