--- a/projects/SDM_Eastern_Hemlock_Web_Application.html
+++ b/projects/SDM_Eastern_Hemlock_Web_Application.html
@@ -28,6 +28,8 @@
   </div>
   <!--- Section 2: Project Title & Website Image --->
   <!-- Desktop -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <div class="desktop">
       <div class="about_cont">
@@ -44,6 +46,8 @@
           </div>
         </div>
       </div>
+    </div>
+    </div>
     </div>
   <!-- Tablet & Mobile-->
     <div class="tablet_device_1000px">
@@ -65,6 +69,8 @@
   </div>
   <!--- Section 3: Project Information --->
   <!-- Desktop -->
+  <div style="background-color: var(--lightmain)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="desktop">
     <div class="grid_background_col">
       <div class="proj-info-cont" style="text-align:left;">
@@ -84,6 +90,8 @@
         </div>
       </div>
     </div>
+  </div>
+  </div>
   </div>
   <!-- Tablet & Mobile -->
   <div class="tablet_device_1000px">
@@ -107,6 +115,8 @@
     </div>
   </div>
   <!-- Section 4: Project Description and Results -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Project Description:</b></p>
     <p style="padding-bottom: 20px;">Building off of this Species Distribution Model (SDM) Tutorial in R, linked <a class="link" href="https://www.rpubs.com/kerkhoffa/SDMMaxent">here</a>, I predicted the species distribution for Eastern Hemlock (Tsuga canadensis) for present day and 2070. These layers were mapped with the slider tool in ArcGIS Online StoryMaps. The distribution of species presence data is also mapped here. More detail on this project is shown in the web mapping application.
@@ -122,8 +132,9 @@
           </li>
         </ul>
       </div>
-
     </div>
+  </div>
+</div>
   <!--- Section 5: Contact Information --->
   <div class="about_me_interests_cont_pg2">
     <div class="about_me_interests_pg2">
