--- a/projects/SDM_Papio_anubis_and_hamadryas.html
+++ b/projects/SDM_Papio_anubis_and_hamadryas.html
@@ -28,6 +28,8 @@
   </div>
   <!--- Section 2: Project Title & Website Image --->
   <!-- Desktop -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <div class="desktop">
       <div class="about_cont">
@@ -42,6 +44,8 @@
         </div>
       </div>
     </div>
+  </div>
+  </div>
   <!-- Tablet & Mobile-->
     <div class="tablet_device_1000px">
       <div class="project_tablet_cont">
@@ -59,6 +63,8 @@
   </div>
   <!--- Section 3: Project Information --->
   <!-- Desktop -->
+  <div style="background-color: var(--lightmain)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="desktop">
     <div class="grid_background_col">
       <div class="proj-info-cont" style="text-align:left;">
@@ -92,6 +98,8 @@
         </div>
       </div>
     </div>
+  </div>
+  </div>
   </div>
   <!-- Tablet & Mobile -->
   <div class="tablet_device_1000px">
@@ -129,6 +137,8 @@
     </div>
   </div>
   <!-- Section 4: Project Description and Results -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Project Description:</b></p>
     <p style="padding-bottom: 20px;">While completing this project with team, I focused on creating a species distribution model for Papio Anubis to pass on to another team member for the multi-criteria analysis relating the SDM to viral transmission. The below description, therefore focuses on thre background and results of the Papio anubis species. More information on the Papio hamadryas results is included in the linked technical report below. <br></br>The species distribution of Papio anubis is primarily concentrated in both eastern and western Africa, featuring a distinct separation between these clusters. Current and 2070 temperature variables demonstrate the climate of Papio anubis in which temperature varies from roughly 20 to 35 degrees Celsius. Additional influences on Papio anubis suitability includes elevation and vegetation based on the DEM and EVI homogeneity variables. The species is primarily located in elevation ranging from sea level to 2000 m. Additionally, EVI illustrates the presence of vegetation in these species observations. These factors, in addition to the other bioclimatic and environmental variables, project higher suitability for Papio anubis in 2070 compared to current suitability for the species. Future suitability shows higher suitability overall, primarily in western Africa, however there is a decrease in suitability in parts of eastern Africa.<br></br> The most influential variable in MaxEnt is annual precipitation contributing 47.1% to the model with 8.8 permutation importance. Additional variables influencing the model include precipitation of the coldest quarter, annual mean temperature, and maximum temperature of the warmest month with 13.1%, 7.3%, and 6.6% contribution and 3.2, 8.1, and 2.6 permutation importance respectively. The response of Papio anubis to the bioclimatic variables, elevation and EVI is also depicted alongside variable contribution to the model. The response of Papio anubis to annual precipitation demonstrates the greatest response at lower values, meanwhile annual mean temperature has a strong response at higher values. The response of Papio anubis to other variables includes a concentration of the species at low elevation, meanwhile the EVI homogeneity variable shows a response just above 0. <br></br> The species distribution model for Papio anubis performed with an AUC score of 0.969. Suitability change for Papio anubis observations features increasing suitability by 53.79%. With 2,402 observations of the species in Africa, 1,292 Papio anubis observations are projected to experience greater suitability. In contrast, 1,097 species observations indicate a decrease in habitat suitability in the year 2070. The 13 remaining observations experience no change from present to 2070 suitability.
@@ -144,7 +154,8 @@
           </li>
         </ul>
       </div>
-
+    </div>
+    </div>
     </div>
   <!--- Section 5: Contact Information --->
   <div class="about_me_interests_cont_pg2">
