--- a/projects/WCS-Environmental-Trends-Analysis.html
+++ b/projects/WCS-Environmental-Trends-Analysis.html
@@ -28,6 +28,8 @@
   </div>
   <!--- Section 2: Project Title & Website Image --->
   <!-- Desktop -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <div class="desktop">
       <div class="about_cont">
@@ -41,6 +43,8 @@
           </div>
         </div>
       </div>
+    </div>
+    </div>
     </div>
   <!-- Tablet & Mobile-->
     <div class="tablet_device_1000px">
@@ -59,6 +63,8 @@
   </div>
   <!--- Section 3: Project Information --->
   <!-- Desktop -->
+  <div style="background-color: var(--lightmain)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="desktop">
     <div class="grid_background_col">
       <div class="proj-info-cont" style="text-align:left;">
@@ -92,6 +98,8 @@
         </div>
       </div>
     </div>
+  </div>
+  </div>
   </div>
   <!-- Tablet & Mobile -->
   <div class="tablet_device_1000px">
@@ -129,6 +137,8 @@
     </div>
   </div>
   <!-- Section 4: Project Description and Results -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Project Description:</b></p>
     <p style="padding-bottom: 20px;">This project was accomplished alongside Rowan Moody in collaboration with David Wilke and Danielle LaBruna of the Wildlife Conservation Society (WCS). Additionally, John Rogan and Nicholas Geron provided much support and mentorship throughout. Below includes our findings.
@@ -271,6 +281,8 @@
       </ul>
     </div>
     </div>
+  </div>
+  </div>
   <!--- Section 5: Contact Information --->
   <div class="about_me_interests_cont_pg2">
     <div class="about_me_interests_pg2">
