--- a/about.html
+++ b/about.html
@@ -27,19 +27,21 @@
     </div>
   </div>
   <!--- Section 1: About Me again --->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1800px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
-
       <div class="about_me_center">
         <img class="me_image" src="./images/aboutme_photo3.jpg" alt=""></img>
-
           <p style="padding-right: 2.5%; padding-left:2.5%;">As a Fellow for the NASA DEVELOP National Program, I supervise teams and projects geared towards using Earth observations to address environmental issues. Before transitioning into this role, I participated in the program for two terms (Summer 2021 and Fall 2021) working on crop yield forecasting and flood detection projects.
           <br></br>In May 2020 and June 2021, I graduated from Clark University receiving a B.A. in Environmental Science on the Earth Systems Science track and M.S. in Geographic Information Science, respectively. While pursuing my undergraduate and graduate degrees, I worked as a Remote Sensing Research Assistant and Technical Support Clark Labs. This included working on a land cover change prediction project in partnership with ESRI and a pond aquaculture and mangrove classification project for the Gordan and Betty and Moore Foundation. While at Clark Labs, I was also responsible for providing technical assistance to users of TerrSet and IDRISI products.
           <br></br>I hope to continue my career in remote sensing, GIS, and Earth science. I am also passionate about doing research relating to land cover change, terrestrial and coastal ecosystems, atmospheric science, and the threats we face by climate change. My goal is to increase skills in programming and utilize technology to better understand our environment.
           </p>
-
       </div>
         </div>
+      </div></div>
       <!--- Section 1: About Me again --->
+      <div style="background-color: var(--lightmain)">
+      <div style="max-width: 1800px; margin: 0 auto !important; float: none !important;">
       <div class="grid_background_col" style="padding:60px;">
         <!-- <div class="grid_title_txt"><h1>FEATURED ARTICLES</h1></div> -->
           <!-- <div class="homepage_sect2_cont"> -->
@@ -54,10 +56,12 @@
               <br>
               <p>Python | ArcPy | R | RStudio | IDRISI TerrSet | ArcGIS | GitHub | Slack | Google Earth Pro | HTML | CSS | JavaScript | Google Earth Engine</p>
             </div>
-          <!-- </div> -->
         </div>
-
+      </div>
+    </div>
   <!--- Section 2: Featured --->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1800px; margin: 0 auto !important; float: none !important;">
       <div class="grid_background_col2">
         <div class="grid_title_txt"><h1>FEATURED ARTICLES</h1></div>
           <div class="homepage_sect2_cont">
@@ -86,6 +90,8 @@
             </ul>
           </div>
         </div>
+      </div>
+    </div>
   <!--- Section 4: Contact Information --->
   <div class="about_me_interests_cont_pg2">
     <div class="about_me_interests_pg2">
