--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="about-right">
         <div class="aboutpag1-text">
-        <h1 style="color: var(--accent2);">ABOUT ME</h1><br>
+        <h1 style="color: var(--accent2); text-align: left;">ABOUT ME</h1><br>
         <p>Hi! My name is Caroline Williams, and I am a GIS and Remote Sensing Analyst currently working as a NASA DEVELOP Pop-up Fellow. I enjoy all things relating to environmental science and using technology to better understand our planet.</p>
         </div>
         <div class="button_buffer" style="float: left;">
