--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="about-right">
         <div class="aboutpag1-text">
         <h1 style="color: var(--accent2); text-align: left;">ABOUT ME</h1><br>
-        <p>Hi! My name is Caroline Williams, and I am a GIS and Remote Sensing Analyst currently working as a NASA DEVELOP Pop-up Fellow. I enjoy all things relating to environmental science and using technology to better understand our planet.</p>
+        <p style="max-width: 500px;">Hi! My name is Caroline Williams, and I am a GIS and Remote Sensing Analyst currently working as a NASA DEVELOP Pop-up Fellow. I enjoy all things relating to environmental science and using technology to better understand our planet.</p>
         </div>
         <div class="button_buffer" style="float: left;">
           <a class="button_blk" href="about.html">More About Me</a>
