--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Caroline Williams">
+    <meta name="keywords" content="GIS, Portfolio">
     <title>Caroline Williams | GIS Portfolio</title>
     <link rel="icon" href="">
     <link rel="stylesheet" href="styles/style.css">
