--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Caroline Williams">
-    <meta name="keywords" content="GIS, Portfolio">
+    <!-- <meta name="keywords" content="GIS, Portfolio, Remote Sensing"> -->
+    <meta name="description" content="Welcome to my portfolio! I enjoy all things GIS, remote sensing, and earth science. This portfolio features my professional work and experiences.">
     <title>Caroline Williams | GIS Portfolio</title>
     <link rel="icon" href="">
     <link rel="stylesheet" href="styles/style.css">
