Portfolio Update July 2023
Major Updates: Added Fellow Projects

--- a/projects/SDM_Eastern_Hemlock_Web_Application.html
+++ b/projects/SDM_Eastern_Hemlock_Web_Application.html
@@ -42,7 +42,7 @@
           <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Predicting the Species Distribution of Eastern Hemlock (Tsuga canadensis) and Generating an ArcGIS Online StoryMap Web Application</i></h3>
           </div>
           <div class="button_buffer">
-            <a class="button_blk" href="https://arcg.is/15ab1H">SDM ArcGIS StoryMap</a>
+            <a class="button_blk" href="https://clarku.maps.arcgis.com/apps/MapJournal/index.html?appid=b6fd456926984e04ad5274bfb93e696f">SDM ArcGIS StoryMap</a>
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
           <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Predicting the Species Distribution of Eastern Hemlock (Tsuga canadensis) and Generating an ArcGIS Online StoryMap Web Application</i></h3>
           </div>
           <div class="button_buffer">
-            <a class="button_blk" href="https://arcg.is/15ab1H">SDM ArcGIS StoryMap</a>
+            <a class="button_blk" href="https://clarku.maps.arcgis.com/apps/MapJournal/index.html?appid=b6fd456926984e04ad5274bfb93e696f">SDM ArcGIS StoryMap</a>
           </div>
         </div>
       </div>
