--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="desktop">
     <div class="about_cont">
       <div class="about-left">
-      <img src="images/aboutme_photo2.jpg" class="about-image">
+      <img src="images/headshot_crop.jpg" class="about-image">
         <!-- <div class="border-line"></div> -->
       </div>
       <div class="about-right">
@@ -70,7 +70,7 @@
   <div class="tablet_device_1000px">
     <div class="about_tablet_cont">
       <div class="about-tablet-left">
-      <img src="images/aboutme_photo2.jpg" class="about-tablet-image">
+      <img src="images/headshot.jpg" class="about-tablet-image">
         <!-- <div class="border-line"></div> -->
       </div>
       <div class="about-tablet-right">
@@ -90,11 +90,49 @@
   <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <div class="grid_title_txt">
-    <h1>PROJECT HIGHLIGHT</h1>
+    <h1>HIGHLIGHT</h1>
     <div class="slideshow-container">
+      <div class="mySlides fade">
+      <div class="highlight_cont">
+        <div class="numbertext">1 / 4</div>
+        <div class="highlight-left">
+          <div class="highlight-text">
+          <h1 class="highlight-title">NASA Pop-Up Projects</h1>
+          <h3 class="highlight-subtitle" style="font-weight:normal;"><i>Projects I managed in the NASA DEVELOP program as the Fellow for the Pop-Up Project (PUP) Office</p></i></h3><br>
+          <p class="highlight-maintext">Through my current role as Fellow for NASA DEVELOP's Pop-Up Project Locations, I oversee projects across the United States appling Earth observations to real-world issues. Projects include: UHEAT Urban Development, Mexico Disasters, Maipo River Valley Agriculture, Chesapeake Bay Water Resources, Shoshone River Water Resources, and Southeast US Climate.
+          </div>
+        </div>
+        <div class="highlight-right">
+        <img src="images/2022Spring_PUP_UHEATUrban_WebsiteImage_crop.png" class="highlight-image">
+        <div class="highlight-bottom-right-txt">Image Credit: NASA DEVELOP</div>
+        </div>
+      </div>
+      <div class="button_buffer">
+        <a class="button_blk" href="projects/NASA-DEVELOP-PUP-Projects.html">More About PUP Projects</a>
+      </div>
+      </div>
+      <div class="mySlides fade">
+      <div class="highlight_cont">
+        <div class="numbertext">2 / 4</div>
+        <div class="highlight-left">
+          <div class="highlight-text">
+          <h1 class="highlight-title">NASA ARSET Training</h1>
+          <h3 class="highlight-subtitle" style="font-weight:normal;"><i>Monitoring and Modeling Floods using Earth Observations</p></i></h3><br>
+          <p class="highlight-maintext">In this NASA Applied Remote Sensing Training (ARSET) webinar, I contributed as a guest speaker providing a case study example of utilizing NASA SERVIR's HYDRAFloods tool in Python to detect flooding. Citation: (2022). ARSET - Monitoring and Modeling Floods using Earth Observations. NASA Applied Remote Sensing Training Program (ARSET).
+          </div>
+        </div>
+        <div class="highlight-right">
+        <img src="images/ARSET_Monitoring_Floods_Training.jpg" class="highlight-image">
+        <div class="highlight-bottom-right-txt">Image Credit: NASA ARSET</div>
+        </div>
+      </div>
+      <div class="button_buffer">
+        <a class="button_blk" href="http://appliedsciences.nasa.gov/join-mission/training/english/arset-monitoring-and-modeling-floods-using-earth-observations">More About ARSET Training</a>
+      </div>
+      </div>
     <div class="mySlides fade">
     <div class="highlight_cont">
-      <div class="numbertext">1 / 2</div>
+      <div class="numbertext">3 / 4</div>
       <div class="highlight-left">
         <div class="highlight-text">
         <h1 class="highlight-title">Central America Disasters</h1>
@@ -113,7 +151,7 @@
     </div>
     <div class="mySlides fade">
     <div class="highlight_cont">
-    <div class="numbertext">2 / 2</div>
+    <div class="numbertext">4 / 4</div>
       <div class="highlight-left">
         <div class="highlight-text">
         <h1 class="highlight-title">Argentina Agriculture</h1>
@@ -136,6 +174,8 @@
     <div style="text-align:center">
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+      <span class="dot" onclick="currentSlide(4)"></span>
     </div>
     </div>
   </div>
@@ -148,6 +188,36 @@
     <div class="grid_title_txt"></div>
       <div class="homepage_sect2_cont">
       <div class="row">
+      <!-- <div class="column">
+        <a href="projects/NASA-DEVELOP-PUP-Projects.html" target="">
+          <div class="container">
+            <img data-src="./images/2022Spring_PUP_UHEATUrban_WebsiteImage_v2.png" class="image">
+            <div class="overlay">
+              <div class="grid_text">NASA DEVELOP PUP Projects</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="column">
+        <a href="projects/NASA-DEVELOP-CentralAmericaDisasters.html" target="">
+          <div class="container">
+            <img data-src="./images/2021Fall_MSFC_CentralAmericaDisasters_WebsiteImage_mycopy.jpg" class="image">
+            <div class="overlay">
+              <div class="grid_text">NASA DEVELOP Central America Disasters</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="column">
+        <a href="projects/NASA-DEVELOP-ArgentinaAg.html" target="">
+          <div class="container">
+            <img data-src="./images/2021Sum_GSFC_ArgentinaAg_WebsiteImage.jpg" class="image">
+            <div class="overlay">
+              <div class="grid_text">NASA DEVELOP Argentina Agriculture</div>
+            </div>
+          </div>
+        </a>
+      </div> -->
       <div class="column">
         <a href="projects/Mapping-Burn-Scars-using-GEE.html" target="">
           <div class="container">
