--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,19 @@
     <button class="portbtn" onclick="filterSelection('GIS')"> GIS</button>
     <button class="portbtn" onclick="filterSelection('remotesensing')"> Remote Sensing</button>
     <button class="portbtn" onclick="filterSelection('webmaps')"> Web Mapping</button>
+        <button class="portbtn" onclick="filterSelection('clark')"> Clark Labs</button>
+    <button class="portbtn" onclick="filterSelection('develop')"> NASA DEVELOP</button>
   </div>
 <div class="portrow">
+  <div class="portcolumn GIS remotesensing develop">
+    <div class="portcontent">
+      <a href="projects/NASA-DEVELOP-PUP-Projects.html" target="" class="port_txt">
+        <img src="images/2022Spring_PUP_UHEATUrban_WebsiteImage_v2.png" alt="NASA DEVELOP PUP Projects" style="width:100%">
+        <h3 style="font-family: 'Montserrat', sans-serif;">NASA DEVELOP PUP Projects</h3>
+        <h4>Image Credit: NASA DEVELOP</h4>
+      </a>
+    </div>
+  </div>
   <div class="portcolumn GIS remotesensing">
     <div class="portcontent">
       <a href="projects/Mapping-Burn-Scars-using-GEE.html" target="" class="port_txt">
@@ -46,7 +57,7 @@
       </a>
     </div>
   </div>
-  <div class="portcolumn GIS remotesensing">
+  <div class="portcolumn GIS remotesensing develop">
     <div class="portcontent">
       <a href="projects/NASA-DEVELOP-CentralAmericaDisasters.html" target="" class="port_txt">
         <img src="images/2021Fall_MSFC_CentralAmericaDisasters_WebsiteImage_mycopy.jpg" alt="Central America Disasters Project" style="width:100%">
@@ -55,12 +66,20 @@
       </a>
     </div>
   </div>
-  <div class="portcolumn GIS remotesensing">
+  <div class="portcolumn GIS remotesensing develop">
     <div class="portcontent">
       <a href="projects/NASA-DEVELOP-ArgentinaAg.html" target="" class="port_txt">
         <img src="images/2021Sum_GSFC_ArgentinaAg_WebsiteImage.jpg" class alt="Argentina Agriculture Project" style="width:100%">
         <h3 style="font-family: 'Montserrat', sans-serif;">NASA DEVELOP Argentina Agriculture Summer 2021 Project</h3>
         <h4>Image Credit: NASA DEVELOP</h4>
+      </a>
+    </div>
+  </div>
+  <div class="portcolumn GIS remotesensing clark">
+    <div class="portcontent">
+      <a href="projects/Clark_Labs_Pond_Aquaculture.html" target="" class="port_txt">
+      <img src="images/ClarkLabs_Pond.jpg" alt="Clark Labs Pond Aquaculture" style="width:100%">
+      <h3 style="font-family: 'Montserrat', sans-serif;">Clark Labs Pond Aquaculture and Mangrove Land Cover Classification</h3>
       </a>
     </div>
   </div>
@@ -85,6 +104,22 @@
       <a href="projects/Malnutrition-Health-Sites-in-Mali-Web-Mapping.html" target="" class="port_txt">
       <img src="images/studio6_project_image_crop.jpg" alt="Car" style="width:100%">
       <h3 style="font-family: 'Montserrat', sans-serif;">Malnutrition & Health Sites in Mali Web Mapping</h3>
+      </a>
+    </div>
+  </div>
+  <div class="portcolumn webmaps">
+    <div class="portcontent">
+      <a href="projects/studio4.html" target="" class="port_txt">
+      <img src="images/studio4.png" alt="Car" style="width:100%">
+      <h3 style="font-family: 'Montserrat', sans-serif;">Studio 4 Web Map</h3>
+      </a>
+    </div>
+  </div>
+  <div class="portcolumn webmaps">
+    <div class="portcontent">
+      <a href="projects/studio3.html" target="" class="port_txt">
+      <img src="images/studio3.png" alt="Car" style="width:100%">
+      <h3 style="font-family: 'Montserrat', sans-serif;">Studio 3 Web Map</h3>
       </a>
     </div>
   </div>
@@ -117,6 +152,14 @@
       <a href="projects/SDM_Papio_anubis_and_hamadryas.html" target="" class="port_txt">
       <img src="images/sdm_papio_anubis.jpg" alt="Car" style="width:100%">
       <h3 style="font-family: 'Montserrat', sans-serif;">Specied Distribution Model: Papio anubis and Papio hamadryas</h3>
+      </a>
+    </div>
+  </div>
+  <div class="portcolumn GIS clark">
+    <div class="portcontent">
+      <a href="projects/Clark_Labs_ESRI_Global.html" target="" class="port_txt">
+      <img src="images/ClarkLabs_ESRI.png" alt="Car" style="width:100%">
+      <h3 style="font-family: 'Montserrat', sans-serif;">Clark Labs ESRI Global Land Cover Change Vulnerability and Prediction Mapping</h3>
       </a>
     </div>
   </div>
