--- a/projects/NASA-DEVELOP-PUP-Projects.html
+++ b/projects/NASA-DEVELOP-PUP-Projects.html
@@ -191,6 +191,6 @@
   <div class="bottom_footer">
     <p><small>&copy; Copyright 2023, Caroline Williams</small></p>
   </div>
-  <!-- <script src="../scripts/icon.js"></script> -->
+  <script src="../scripts/icon.js"></script>
   </body>
 </html>
