--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             <ul>
               <!-- Article 1 -->
               <li>
-                <a class="featured" href="https://doi.org/10.1016/j.horiz.2022.100039" target="_blank">
+                <a class="featured" href="https://appliedsciences.nasa.gov/our-impact/news/nasa-develop-25-years-science-serving-society" target="_blank">
                 <b>In NASA Applied Sciences August 2nd, 2023</b>
                 <p>NASA DEVELOP: 25 Years of Science Serving Society</p>
                 </a>
