add certification in SC

--- a/about.html
+++ b/about.html
@@ -56,6 +56,12 @@
               <br>
               <p>Python | ArcPy | R | RStudio | IDRISI TerrSet | ArcGIS | GitHub | Slack | Google Earth Pro | HTML | CSS | JavaScript | Google Earth Engine</p>
             </div>
+            <br>
+            <div>
+              <h2 style="color: var(--accent2); font-weight: bold; font-family: 'Montserrat', sans-serif;">Certifications</h2>
+              <br>
+              <p>Certified Software Carpentry Instructor,  <i>July 2022 – Present</i></p>
+            </div>
         </div>
       </div>
     </div>
