--- a/resume.html
+++ b/resume.html
@@ -111,7 +111,7 @@
           <p><i>Bachelor of Arts in Environmental Science</i> - Sep 2016 - May 2020</p>
           <br>
           <h2 style="color: var(--accent2); font-weight: bold; font-family: 'Montserrat', sans-serif;">Awards and Honors</h2>
-          <p>summa cum laude | High Honors in Environmental Science | Dean's List all semesters | Co-recieved Summer 2021 NASA DEVELOPer of the Term</p>
+          <p>summa cum laude | High Honors in Environmental Science | Dean's List all semesters | Co-received Summer 2021 NASA DEVELOPer of the Term</p>
         </div>
       </div>
       <div class="button_buffer">
