--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="about-right">
         <div class="aboutpag1-text">
         <h1 style="color: var(--accent2); text-align: left;">ABOUT ME</h1><br>
-        <p style="max-width: 500px;">Hi! My name is Caroline Williams, and I am a GIS and Remote Sensing Analyst currently working as a NASA DEVELOP Pop-up Fellow. I enjoy all things relating to environmental science and using technology to better understand our planet.</p>
+        <p style="max-width: 500px;">Hi! My name is Caroline Williams, and I am a GIS and Remote Sensing Analyst currently working as Physical Climate Risk Research Assistant at Woodwell Climate Research Center. I enjoy all things relating to environmental science and using technology to better understand our planet.</p>
         </div>
         <div class="button_buffer" style="float: left;">
           <a class="button_blk" href="about.html">More About Me</a>
@@ -99,7 +99,7 @@
           <div class="highlight-text">
           <h1 class="highlight-title">NASA Pop-Up Projects</h1>
           <h3 class="highlight-subtitle" style="font-weight:normal;"><i>Projects I managed in the NASA DEVELOP program as the Fellow for the Pop-Up Project (PUP) Office</p></i></h3><br>
-          <p class="highlight-maintext">Through my current role as Fellow for NASA DEVELOP's Pop-Up Project Locations, I oversee projects across the United States appling Earth observations to real-world issues. Projects include: UHEAT Urban Development, Mexico Disasters, Maipo River Valley Agriculture, Chesapeake Bay Water Resources, Shoshone River Water Resources, and Southeast US Climate.
+          <p class="highlight-maintext">Through my recent role as Fellow for NASA DEVELOP's Pop-Up Project Locations, I oversaw projects across the United States appling Earth observations to real-world issues. Projects include: UHEAT Urban Development, Mexico Disasters, Maipo River Valley Agriculture, Chesapeake Bay Water Resources, Shoshone River Water Resources I & II, Southeast US Climate, InVEST Urban Development, Kankakee Water Resources, and New York Ecological Conservation.
           </div>
         </div>
         <div class="highlight-right">
