--- a/resume.html
+++ b/resume.html
@@ -31,13 +31,22 @@
     <div class="timeline_cont">
       <h2 style="text-align:center; padding-bottom: 15px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">Professional Experiences</h2>
     <div class="timeline">
+      <div class="timelinecontainer timelineleft">
+        <div class="timelinecontent">
+          <!-- <img src="./images/NASA_MSFC_sign.jpg" style="width:100%; border-radius:4px;"> -->
+          <h2 style="font-weight: bold; font-family: 'Montserrat', sans-serif;">Nov 2023 - Present</h2>
+          <h4 style="padding-bottom: 10px; font-style: italic; font-weight: normal; font-family: 'Montserrat', sans-serif;">Woodwell Climate Research Center</h4>
+          <h3 style="padding-top: 10px; padding-bottom: 10px; font-weight: bold; font-family: 'Montserrat', sans-serif;">Physical Climate Risk Research Assistant</h3>
+          <p>I help process, analyze, and visualize geospatial data and assess physical climate risks.</p>
+        </div>
+      </div>
       <div class="timelinecontainer timelineright">
         <div class="timelinecontent">
           <!-- <img src="./images/..." style="width:100%; border-radius:4px;"> -->
-          <h2 style="font-weight: bold; font-family: 'Montserrat', sans-serif;">Jan 2022 - Present</h2>
-          <h4 style="padding-bottom: 10px; font-style: italic; font-weight: normal; font-family: 'Montserrat', sans-serif;">Science Systems and Applications Inc. (SSAI)</h4>
+          <h2 style="font-weight: bold; font-family: 'Montserrat', sans-serif;">Jan 2022 - Nov 2023</h2>
+          <h4 style="padding-bottom: 10px; font-style: italic; font-weight: normal; font-family: 'Montserrat', sans-serif;">Science Systems and Applications Inc. (SSAI) (Jan 2022 - Aug 2023)<br>Analytical Mechanics Associates (AMA) (Sept 2023 - Nov 2023)</h4>
           <h3 style="padding-top: 10px; padding-bottom: 10px; font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Virtual Pop-up Fellow</h3>
-          <p>As a Fellow for the NASA DEVELOP National Program, I supervise teams to ensure project are executed over the course of 10-week terms.  My role also includes coordinate with science advisors, partners, the National Program Office, to generate project ides, and write project proposals. I also work on identify sites for our pop-up project location which differs from our traditional “nodes” or static locations. I oversee projects from start to partner handoff and contribute to the capacity building of our participants and partner organizations to utilize and integrate NASA Earth observations into their careers or decision-making practices, respectively.</p>
+          <p>As a Fellow for the NASA DEVELOP National Program, I supervised teams to ensure project were executed over the course of 10-week terms. My role also included coordinating with science advisors, partners, the National Program Office, to generate project ides, and write project proposals. I also worked on identify sites for our pop-up project location which differed from the traditional “nodes” or static locations. I oversaw projects from start to partner handoff and contributed to the capacity building of our participants and partner organizations to utilize and integrate NASA Earth observations into their careers or decision-making practices, respectively.</p>
         </div>
       </div>
       <div class="timelinecontainer timelineleft">
