--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="about-tablet-right">
         <div class="about-tablet-text">
         <h1 style="color: var(--accent2);">ABOUT ME</h1><br>
-        <p style="font-size: 20px;">Hi! My name is Caroline Williams, and I am a GIS and Remote Sensing Analyst currently working as a NASA DEVELOP Pop-up Fellow. I enjoy all things relating to environmental science and using technology to better understand our planet.</p>
+        <p style="font-size: 20px;">Hi! My name is Caroline Williams, and I am a GIS and Remote Sensing Analyst currently working as Physical Climate Risk Research Assistant at Woodwell Climate Research Center. I enjoy all things relating to environmental science and using technology to better understand our planet.</p>
         </div>
         <div class="button_buffer" style="float: left;">
           <a class="button_blk" href="about.html">More About Me</a>
