--- a/projects/NASA-DEVELOP-PUP-Projects.html
+++ b/projects/NASA-DEVELOP-PUP-Projects.html
@@ -86,6 +86,26 @@
         </thead>
         <tbody role="rowgroup">
           <tr role="row">
+            <td role="cell"><img src="../images/2023Sum_PUP_NewYorkEco_WebsiteImage.jpg" class="table-image"></td>
+            <td role="cell">New York Ecological Conservation</td>
+            <td role="cell"><i>Evaluating Agricultural Conservation Easement Impact Using Earth Observations to Examine Avoided Soil Carbon Loss to Development</i></td>
+            <td role="cell">2023</td>
+            <td role="cell">Summer</td>
+            <td role="cell">Sam Schulteis (Project Lead), Sam Haas, Stephanie Willsey, Oliver Wilson</td>
+            <td role="cell">Charlie Bettigole, Joseph Spruce</td>
+            <td role="cell"><a href="https://appliedsciences.nasa.gov/what-we-do/projects/evaluating-agricultural-conservation-easement-impact-using-earth-observations">More About New York Ecological Conservation</a></td>
+          </tr>
+          <tr role="row">
+            <td role="cell"><img src="../images/2023Sum_PUP_KankakeeWater_WebsiteImage.png" class="table-image"></td>
+            <td role="cell">Kankakee Water Resources</td>
+            <td role="cell"><i>Monitoring Temperature and Vegetation to Detect River Flow Impediments at Energy Intake Structures</i></td>
+            <td role="cell">2023</td>
+            <td role="cell">Summer</td>
+            <td role="cell">Marisa Smedsrud (Project Lead), Hayden Hoffmeister, Oluwatosin Orimolade, Barira Rashid</td>
+            <td role="cell">Dr. Austin Madson</td>
+            <td role="cell"><a href="https://appliedsciences.nasa.gov/what-we-do/projects/monitoring-temperature-and-vegetation-detect-river-flow-impediments-energy">More About Kankakee Water Resources</a></td>
+          </tr>
+          <tr role="row">
             <td role="cell"><img src="../images/2023Spring_PUP_InVESTUrban_WebsiteImage.jpg" class="table-image"></td>
             <td role="cell">InVEST Urban Development</td>
             <td role="cell"><i>Incorporating Earth Observation Data into the Integrated Valuation of Ecosystem Services and Tradeoffs (InVEST) Urban Flood Risk Mitigation Model Python API</i></td>
