--- a/projects/SDM_Eastern_Hemlock_Web_Application.html
+++ b/projects/SDM_Eastern_Hemlock_Web_Application.html
@@ -126,7 +126,7 @@
       <div class="homepage_sect2_cont">
         <ul>
           <li>
-            <a class="featured" href="https://arcg.is/15ab1H" target="_blank">
+            <a class="featured" href="https://clarku.maps.arcgis.com/apps/MapJournal/index.html?appid=b6fd456926984e04ad5274bfb93e696f" target="_blank">
             <p>View <b>SDM Eastern Hemlock ArcGIS StoryMap</b></p>
             </a>
           </li>
