--- a/resume.html
+++ b/resume.html
@@ -123,9 +123,9 @@
           <p>summa cum laude | High Honors in Environmental Science | Dean's List all semesters | Co-received Summer 2021 NASA DEVELOPer of the Term</p>
         </div>
       </div>
-      <div class="button_buffer">
+      <!-- <div class="button_buffer">
                <a class="button_blk" href="documents/Caroline_Williams_Resume.pdf">Download Resume - PDF</a>
-             </div>
+             </div> -->
            </div>
         </div>
   <!--- Section 4: Contact Information --->
@@ -134,11 +134,7 @@
       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Contact</h2>
       <br>
-      <p>Please feel free to contact me at my email address or through my LinkedIn Account below.</p>
-      <br>
-      <h2 style="font-family: 'Montserrat', sans-serif;">Email</h2>
-      <br>
-      <p>cawilliams719@gmail.com</p>
+      <p>Please feel free to contact me through my LinkedIn Account below.</p>
       <br>
     </div>
   </div>
@@ -149,7 +145,7 @@
     <a href="https://github.com/cawilliams719"><i class="fa fa-github"></i></a>
   </div>
   <div class="bottom_footer">
-    <p><small>&copy; Copyright 2023, Caroline Williams</small></p>
+    <p><small>&copy; Copyright 2026, Caroline Williams</small></p>
   </div>
   <script src="scripts/icon.js"></script>
   </body>
