--- a/projects/studio3.html
+++ b/projects/studio3.html
@@ -162,11 +162,7 @@
       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Contact</h2>
       <br>
-      <p>Please feel free to contact me at my email address or through my LinkedIn Account below.</p>
-      <br>
-      <h2 style="font-family: 'Montserrat', sans-serif;">Email</h2>
-      <br>
-      <p>cawilliams719@gmail.com</p>
+      <p>Please feel free to contact me through my LinkedIn Account below.</p>
       <br>
     </div>
   </div>
@@ -177,7 +173,7 @@
     <a href="https://github.com/cawilliams719"><i class="fa fa-github"></i></a>
   </div>
   <div class="bottom_footer">
-    <p><small>&copy; Copyright 2023, Caroline Williams</small></p>
+    <p><small>&copy; Copyright 2026, Caroline Williams</small></p>
   </div>
   <script src="../scripts/icon.js"></script>
   </body>
